--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/assets/images/small-icon.png" type="image/png">
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="E-Commerce System"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/images/small-icon.png" />
+    <meta name="description" content="E-Commerce System" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>ShopKi</title>
   </head>
